DTO
Estudando DTO funcionamento em camada , transferencia  objetos